# postgres-ost

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: benchmark.sh  init_db
src/: args.rs  backfill.rs  column_map.rs  lib.rs  log_table_replay.rs  logical_replay.rs  logical_replication.rs  main.rs  migration.rs  migration_runner.rs  orchestrator.rs  parse.rs  pg_query_parser.rs  replay.rs  sql_parser.rs  streaming_logical_replay.rs  table.rs  version.rs
src/logical_replication/: message.rs  mod.rs  publication.rs  slot.rs  stream.rs
src/replay/: mod.rs  streaming_logical_replay.rs
tests/: common.rs  integration.rs  logical_replication.rs  logical_replication_slot.rs  logical_replication_stream.rs
