[package]
name = "postgres-ost"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
itertools = "0.14.0"
postgres = "0.19.10"
r2d2 = "0.8"
r2d2_postgres = "0.18"
ctrlc = "3.4.2"
pg_query = "6.1.0"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
serial_test = "3.0.0"
